; ModuleID = '/home/carl/AnghaBench/linux/lib/extr_test_objagg.c_world_obj_get.c'
source_filename = "/home/carl/AnghaBench/linux/lib/extr_test_objagg.c_world_obj_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.objagg_obj = type { i32 }
%struct.world = type { i32*, %struct.objagg_obj** }
%struct.objagg = type { i32 }
%struct.tokey = type { i32 }

@.str = private unnamed_addr constant [31 x i8] c"Key %u: Failed to get object.\0A\00", align 1
@.str.1 = private unnamed_addr constant [46 x i8] c"Key %u: God another object for the same key.\0A\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.objagg_obj* (%struct.world*, %struct.objagg*, i32)* @world_obj_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.objagg_obj* @world_obj_get(%struct.world* %0, %struct.objagg* %1, i32 %2) #0 {
  %4 = alloca %struct.objagg_obj*, align 8
  %5 = alloca %struct.world*, align 8
  %6 = alloca %struct.objagg*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.objagg_obj*, align 8
  %9 = alloca %struct.tokey, align 4
  %10 = alloca i32, align 4
  store %struct.world* %0, %struct.world** %5, align 8
  store %struct.objagg* %1, %struct.objagg** %6, align 8
  store i32 %2, i32* %7, align 4
  %11 = load i32, i32* %7, align 4
  %12 = getelementptr inbounds %struct.tokey, %struct.tokey* %9, i32 0, i32 0
  store i32 %11, i32* %12, align 4
  %13 = load %struct.objagg*, %struct.objagg** %6, align 8
  %14 = call %struct.objagg_obj* @objagg_obj_get(%struct.objagg* %13, %struct.tokey* %9)
  store %struct.objagg_obj* %14, %struct.objagg_obj** %8, align 8
  %15 = load %struct.objagg_obj*, %struct.objagg_obj** %8, align 8
  %16 = call i64 @IS_ERR(%struct.objagg_obj* %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %22

18:                                               ; preds = %3
  %19 = load i32, i32* %7, align 4
  %20 = call i32 @pr_err(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i32 %19)
  %21 = load %struct.objagg_obj*, %struct.objagg_obj** %8, align 8
  store %struct.objagg_obj* %21, %struct.objagg_obj** %4, align 8
  br label %71

22:                                               ; preds = %3
  %23 = load %struct.world*, %struct.world** %5, align 8
  %24 = getelementptr inbounds %struct.world, %struct.world* %23, i32 0, i32 0
  %25 = load i32*, i32** %24, align 8
  %26 = load i32, i32* %7, align 4
  %27 = call i64 @key_id_index(i32 %26)
  %28 = getelementptr inbounds i32, i32* %25, i64 %27
  %29 = load i32, i32* %28, align 4
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %39, label %31

31:                                               ; preds = %22
  %32 = load %struct.objagg_obj*, %struct.objagg_obj** %8, align 8
  %33 = load %struct.world*, %struct.world** %5, align 8
  %34 = getelementptr inbounds %struct.world, %struct.world* %33, i32 0, i32 1
  %35 = load %struct.objagg_obj**, %struct.objagg_obj*** %34, align 8
  %36 = load i32, i32* %7, align 4
  %37 = call i64 @key_id_index(i32 %36)
  %38 = getelementptr inbounds %struct.objagg_obj*, %struct.objagg_obj** %35, i64 %37
  store %struct.objagg_obj* %32, %struct.objagg_obj** %38, align 8
  br label %55

39:                                               ; preds = %22
  %40 = load %struct.world*, %struct.world** %5, align 8
  %41 = getelementptr inbounds %struct.world, %struct.world* %40, i32 0, i32 1
  %42 = load %struct.objagg_obj**, %struct.objagg_obj*** %41, align 8
  %43 = load i32, i32* %7, align 4
  %44 = call i64 @key_id_index(i32 %43)
  %45 = getelementptr inbounds %struct.objagg_obj*, %struct.objagg_obj** %42, i64 %44
  %46 = load %struct.objagg_obj*, %struct.objagg_obj** %45, align 8
  %47 = load %struct.objagg_obj*, %struct.objagg_obj** %8, align 8
  %48 = icmp ne %struct.objagg_obj* %46, %47
  br i1 %48, label %49, label %54

49:                                               ; preds = %39
  %50 = load i32, i32* %7, align 4
  %51 = call i32 @pr_err(i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.1, i64 0, i64 0), i32 %50)
  %52 = load i32, i32* @EINVAL, align 4
  %53 = sub nsw i32 0, %52
  store i32 %53, i32* %10, align 4
  br label %65

54:                                               ; preds = %39
  br label %55

55:                                               ; preds = %54, %31
  %56 = load %struct.world*, %struct.world** %5, align 8
  %57 = getelementptr inbounds %struct.world, %struct.world* %56, i32 0, i32 0
  %58 = load i32*, i32** %57, align 8
  %59 = load i32, i32* %7, align 4
  %60 = call i64 @key_id_index(i32 %59)
  %61 = getelementptr inbounds i32, i32* %58, i64 %60
  %62 = load i32, i32* %61, align 4
  %63 = add nsw i32 %62, 1
  store i32 %63, i32* %61, align 4
  %64 = load %struct.objagg_obj*, %struct.objagg_obj** %8, align 8
  store %struct.objagg_obj* %64, %struct.objagg_obj** %4, align 8
  br label %71

65:                                               ; preds = %49
  %66 = load %struct.objagg*, %struct.objagg** %6, align 8
  %67 = load %struct.objagg_obj*, %struct.objagg_obj** %8, align 8
  %68 = call i32 @objagg_obj_put(%struct.objagg* %66, %struct.objagg_obj* %67)
  %69 = load i32, i32* %10, align 4
  %70 = call %struct.objagg_obj* @ERR_PTR(i32 %69)
  store %struct.objagg_obj* %70, %struct.objagg_obj** %4, align 8
  br label %71

71:                                               ; preds = %65, %55, %18
  %72 = load %struct.objagg_obj*, %struct.objagg_obj** %4, align 8
  ret %struct.objagg_obj* %72
}

declare dso_local %struct.objagg_obj* @objagg_obj_get(%struct.objagg*, %struct.tokey*) #1

declare dso_local i64 @IS_ERR(%struct.objagg_obj*) #1

declare dso_local i32 @pr_err(i8*, i32) #1

declare dso_local i64 @key_id_index(i32) #1

declare dso_local i32 @objagg_obj_put(%struct.objagg*, %struct.objagg_obj*) #1

declare dso_local %struct.objagg_obj* @ERR_PTR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
